Fix controller name in organizations view

--- a/app/views/organizations.html
+++ b/app/views/organizations.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="ResourcesCtrl">
+<div class="row" ng-controller="OrganizationsCtrl">
   <div class="row">
     <strong>{{organizations.length}} organizations publishing data</strong>
   </div>
