Add searchbox filter for datasets

--- a/app/views/datasets.html
+++ b/app/views/datasets.html
@@ -1,12 +1,27 @@
 <div class="row" ng-controller="DatasetsCtrl">
-  <div class="col-sm-9">
-    <div class="row">
-      <strong>{{datasets.length}} datasets available</strong>
-    </div>
-    <div class="dataset row" ng-repeat="dataset in datasets">
-      <h4><a href="datasets/{{dataset.name}}">{{dataset.title}}</a></h4>
-      <p>{{dataset.notes}}</p>
-      <cite class="text-muted">Published by {{dataset.organization.title}} - {{dataset.metadata_modified}}</cite>
+
+  <div class="row">
+    <div class="col-sm-12">
+      Search: 
+      <input type="text" search controller="DatasetsCtrl" update="datasets" ng-model="search">
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-sm-3">
+    </div>
+
+    <div class="col-sm-9">
+      <div class="row">
+        <strong>{{datasets.length}} datasets available</strong>
+      </div>
+      <div class="dataset row" ng-repeat="dataset in datasets | filter:search">
+        <h4><a href="datasets/{{dataset.name}}">{{dataset.title}}</a></h4>
+        <p>{{dataset.notes}}</p>
+        <cite class="text-muted">Published by {{dataset.organization.title}} - {{dataset.metadata_modified}}</cite>
+      </div>
+    </div>
+  </div>
+
 </div>
+
