--- a/app/views/organizations.html
+++ b/app/views/organizations.html
@@ -1,13 +1,19 @@
 <div class="row" ng-controller="OrganizationsCtrl">
+
   <div class="row">
     <strong>{{organizations.length}} organizations publishing data</strong>
+    <div class="col-sm-12">
+      Search: 
+      <input type="text" search controller="OrganizationsCtrl" update="organizations" ng-model="search">
+    </div>
   </div>
 
   <div class="row">
     <div class="col-sm-3">
     </div>
+
     <div class="col-sm-9">
-      <div class="col-md-3" ng-repeat="organization in organizations">
+      <div class="col-md-3" ng-repeat="organization in organizations | filter:search">
         <a href="#" class="thumbnail">
           <img src="{{organization.image_display_url}}" alt="Logo de {{organization.display_name}}" />
         </a>
