--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,4 @@
-$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
-// bower:scss
-@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
-// endbower
+@import "http://localhost:4000/css/main.css";
 
 .browsehappy {
   margin: 0.2em 0;
