--- a/app/views/organizations.html
+++ b/app/views/organizations.html
@@ -14,7 +14,7 @@
 
     <div class="col-sm-9">
       <div class="col-md-3" ng-repeat="organization in organizations | filter:search">
-        <a href="#" class="thumbnail">
+        <a href="/#/organizations/{{organization.name}}" class="thumbnail">
           <img src="{{organization.image_display_url}}" alt="Logo de {{organization.display_name}}" />
         </a>
       </div>
