--- a/app/views/organizations.html
+++ b/app/views/organizations.html
@@ -1,4 +1,66 @@
-<div class="row" ng-controller="OrganizationsCtrl">
+<section ng-controller="OrganizationsCtrl">
+  
+  <div class="datasets-heading organizations">
+    <div class="main-container">
+      <div class="cols-12">
+        <div class="col col-2">
+          <div class="col-inner">
+            <h4>Instituciones</h4>
+            <p>{{organizations.length}} instituciones publicando datos abiertos</p>
+          </div>
+        </div>
+        <div class="col col-10">
+          <div class="col-inner">
+            <div class="cols-12">
+              <div class="col col-9 alpha">
+                <div class="col-inner">
+                  <div class="search-datasets">
+                    <input type="text" class="form-control" search controller="DatasetsCtrl" update="datasets" ng-model="search" placeholder="Buscar">
+                  </div>
+                </div>
+              </div>
+              <div class="col col-3 omega">
+                <div class="col-inner">
+                  <div class="form-select">
+                    <select>
+                      <option value="">Ordenar por nombre</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="organizations-alphabet-filter">
+              <a href="">A</a>
+              <a href="">B</a>
+              <a href="">C</a>
+              <a href="">D</a>
+              <a href="">E</a>
+              <a href="">F</a>
+              <a href="">G</a>
+              <a href="">H</a>
+              <a href="">I</a>
+              <a href="">J</a>
+              <a href="">L</a>
+              <a href="">M</a>
+              <a href="">N</a>
+              <a href="">O</a>
+              <a href="">P</a>
+              <a href="">Q</a>
+              <a href="">R</a>
+              <a href="">S</a>
+              <a href="">T</a>
+              <a href="">U</a>
+              <a href="">V</a>
+              <a href="">W</a>
+              <a href="">X</a>
+              <a href="">Y</a>
+              <a href="">Z</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="row">
     <strong>{{organizations.length}} organizations publishing data</strong>
@@ -21,5 +83,5 @@
     </div>
   </div>
 
-</div>
+</section>
 
