Lista de Instituciones

--- a/app/views/datasets.html
+++ b/app/views/datasets.html
@@ -75,17 +75,7 @@
   <div class="main-container">
     <div class="cols-12">
       <div class="col col-2">
-        <div class="col-inner">
-          <div class="page-sidebar">
-            <ul class="page-filters links" role="presentation" aria-hidden="true">
-              <li class="page-filters-title">Filtros</li>
-              <li><a href="">Federal</a></li>
-              <li><a href="">Estatal</a></li>
-              <li><a href="">Municipal</a></li>
-              <li><a href="">Formatos</a></li>
-              <li><a href="">Sector</a></li>
-            </ul>
-          </div>
+        <div class="col-inner" gov-types-menu>
         </div>
       </div>
 
