Datasets categorias directive

--- a/app/views/datasets.html
+++ b/app/views/datasets.html
@@ -29,43 +29,7 @@
                 </div>
               </div>
             </div>
-            <ul class="datesets-categories">
-              <li>
-                <a href="">
-                  <img class="cat-icon" src="http://datos.gob.mx/assets/svg/icon-salud.svg" alt="">
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img class="cat-icon" src="http://datos.gob.mx/assets/svg/icon-geografia.svg" alt="">
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img class="cat-icon" src="http://datos.gob.mx/assets/svg/icon-seguridad.svg" alt="">
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img class="cat-icon" src="http://datos.gob.mx/assets/svg/icon-medio_ambiente.svg" alt="">
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img class="cat-icon" src="http://datos.gob.mx/assets/svg/icon-educacion.svg" alt="">
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img class="cat-icon" src="http://datos.gob.mx/assets/svg/icon-economia.svg" alt="">
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <img class="cat-icon" src="http://datos.gob.mx/assets/svg/icon-all.svg" alt="">
-                </a>
-              </li>
-            </ul>
+            <datasets-categories />
           </div>
         </div>
       </div>
@@ -75,7 +39,8 @@
   <div class="main-container">
     <div class="cols-12">
       <div class="col col-2">
-        <div class="col-inner" gov-types-menu>
+        <div class="col-inner">
+          <gov-types-menu />
         </div>
       </div>
 
