--- a/app/views/organizations.html
+++ b/app/views/organizations.html
@@ -65,7 +65,8 @@
   <div class="main-container">
     <div class="cols-12">
       <div class="col col-2">
-        <div class="col-inner" gov-types-menu>
+        <div class="col-inner">
+          <gov-types-menu />
         </div>
       </div>
       <div class="col col-10 alpha omega">
