--- a/app/views/resources.html
+++ b/app/views/resources.html
@@ -1,28 +1,49 @@
-<div class="row" ng-controller="ResourcesCtrl">
-  <div class="col-sm-3">
-    <div class="thumbnail">
-      <img src="{{dataset.organization.image_url}}" alt="Logo de {{dataset.organization.title}}" />
-      <div class="caption">
-        <p>{{dataset.organization.description}}</p>
+<section class="dataset-detail" ng-controller="ResourcesCtrl">
+
+  <div class="main-container">
+    <div class="cols-12">
+      <div class="col col-2">
+        <div class="col-inner">
+          <div class="organization-detail-card">
+            <div class="organization-logo">
+              <img ng-src="{{dataset.organization.image_url}}" alt="Logo de {{dataset.organization.title}}" />
+            </div>
+            <div class="organization-desc">
+              <p>{{dataset.organization.description}}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col col-10">
+        <div class="col-inner">
+          <div class="dataset-detail-excerpt">
+            <h2>{{dataset.title}}</h2> 
+            <p>{{dataset.notes}}</p>
+            <p><strong>Nivel de Gobierno:</strong> {{dataset.gov_type}}</p>
+          </div>
+          <h5 class="dataset-resources-title">Datos y recursos</h5>
+          <div class="dataset-resources-list">
+            <div class="resource-item" ng-repeat="resource in dataset.resources">
+              <div class="resourse-format">
+                <div class="dataset-format {{resource.format}}">
+                  {{resource.format}}
+                </div>
+              </div>
+              <div class="resource-download">
+                <a href="{{resource.url}}">
+                  <img src="http://datos.gob.mx/assets/svg/icon-circle-arrow-right-gray.svg" alt="">
+                </a>
+              </div>
+              <div class="resource-main">
+                <h4>{{resource.name}}</h4>
+                <p>{{resource.description}}</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-sm-9">
-    <div class="row">
-      <p>{{dataset.title}}</p>
-      <p>{{dataset.notes}}</p>
-      <p><strong>Nivel de Gobierno:</strong> {{dataset.gov_type}}</p>
-      <hr />
-    </div>
-    <div class="row">
-      <p>Datos y recursos</p>
-    </div>
-    <div class="resource row" ng-repeat="resource in dataset.resources">
-      <hr />
-      <h4>{{resource.name}}</h4>
-      <p>{{resource.description}}</p>
-      <p>{{resource.format}}</p>
-      <a href="{{resource.url}}">Descarga</a>
-    </div>
-  </div>
-</div>
+
+</section>
