--- a/app/views/group.html
+++ b/app/views/group.html
@@ -1,24 +1,84 @@
-<div class="row" ng-controller="GroupCtrl">
-
-  <div class="row">
-    <div class="col-sm-3">
-      <a href="/#/groups/{{group.name}}" class="thumbnail">
-        <img src="{{group.image_display_url}}" alt="Logo de {{group.display_name}}" />
-      </a>
-      <p>{{group.description}}</p>
-    </div>
-
-    <div class="col-sm-9">
-      <div class="row">
-        <strong>{{group.packages.length}} datasets available</strong>
-      </div>
-      <div class="dataset row" ng-repeat="dataset in group.packages">
-        <h4><a href="/#/datasets/{{dataset.name}}">{{dataset.title}}</a></h4>
-        <p>{{dataset.notes}}</p>
-        <cite class="text-muted">Published on {{dataset.metadata_modified}}</cite>
+<section ng-controller="GroupCtrl">
+  
+  <div class="datasets-heading">
+    <div class="main-container">
+      <div class="cols-12">
+        <div class="col col-2">
+          <div class="col-inner">
+            <h3><a class="heading-title" href="/#/groups/{{group.name}}">{{group.display_name}}</a></h3>
+            <p>{{group.packages.length}} conjuntos de datos</p>
+          </div>
+        </div>
+        <div class="col col-10">
+          <div class="col-inner">
+            <div class="cols-12">
+              <div class="col col-9 alpha">
+                <div class="col-inner">
+                  <div class="search-datasets">
+                    <input type="text" class="form-control" search controller="DatasetsCtrl" update="datasets" ng-model="search" placeholder="Buscar">
+                  </div>
+                </div>
+              </div>
+              <div class="col col-3 omega">
+                <div class="col-inner">
+                  <div class="form-select">
+                    <select>
+                      <option value="">Ordenar por relevancia</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <datasets-categories />
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
-</div>
+  <div class="single-organization">
+    <div class="main-container">
+      <div class="cols-12">
+        <div class="col col-2">
+          <div class="col-inner">
+            <div class="organization-detail-card">
+              <div class="organization-logo">
+                <img src="{{group.image_display_url}}" alt="Logo de {{group.display_name}}" />
+              </div>
+              <div class="organization-desc">
+                <p>{{group.description}}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col col-10">
+          <div class="col-inner">
+            <div class="datasets-list">
+              <a href="/#/datasets/{{dataset.name}}" class="dataset-item" ng-repeat="dataset in group.packages">
+                <div class="dataset-trending-flag">
+                  <img ng-src="http://datos.gob.mx/assets/svg/icon-trending-green.svg" alt="">
+                </div>
+                <div class="dataset-formats">
+                  <div class="dataset-format csv">CSV</div>
+                  <div class="dataset-format kml">KML</div>
+                </div>
+                <div class="dataset-main">
+                  <h4 class="title">{{dataset.title}}</h4>
+                  <div class="dataset-excerpt">
+                    <p>{{dataset.notes}}</p>
+                  </div>
+                  <div class="dataset-meta-data">
+                    <div class="meta-data">
+                      <strong>{{dataset.metadata_modified | date:'MMMM dd, yyyy'}}:
+                    </div>
+                  </div>
+                </div>
+              </a>    
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+</section>
