Make all links relative

--- a/app/views/datasets.html
+++ b/app/views/datasets.html
@@ -47,7 +47,7 @@
       <div class="col col-10">
         <div class="col-inner">
           <div class="datasets-list">
-            <a href="/#/datasets/{{dataset.name}}" class="dataset-item" ng-repeat="dataset in datasets | filter:search">
+            <a href="#/datasets/{{dataset.name}}" class="dataset-item" ng-repeat="dataset in datasets | filter:search">
               <div class="dataset-trending-flag">
                 <img ng-src="http://datos.gob.mx/assets/svg/icon-trending-green.svg" alt="">
               </div>
