--- a/app/views/groups.html
+++ b/app/views/groups.html
@@ -49,7 +49,7 @@
           <div class="organizations-list">
             <div class="organization-item" ng-repeat="group in groups | filter:search">
               <div class="inner">
-                <a href="/#/groups/{{group.name}}">
+                <a href="#/groups/{{group.name}}">
                   <img src="{{group.image_display_url}}" alt="Logo de {{group.display_name}}" />
                 </a>
               </div>
