--- a/app/views/organization.html
+++ b/app/views/organization.html
@@ -5,7 +5,7 @@
       <div class="cols-12">
         <div class="col col-2">
           <div class="col-inner">
-            <h3><a class="heading-title" href="/#/organizations/{{organization.name}}">{{organization.display_name}}</a></h3>
+            <h3><a class="heading-title" href="#/organizations/{{organization.name}}">{{organization.display_name}}</a></h3>
             <p>{{organization.packages.length}} conjuntos de datos</p>
           </div>
         </div>
@@ -54,7 +54,7 @@
         <div class="col col-10">
           <div class="col-inner">
             <div class="datasets-list">
-              <a href="/#/datasets/{{dataset.name}}" class="dataset-item" ng-repeat="dataset in organization.packages">
+              <a href="#/datasets/{{dataset.name}}" class="dataset-item" ng-repeat="dataset in organization.packages">
                 <div class="dataset-trending-flag">
                   <img ng-src="http://datos.gob.mx/assets/svg/icon-trending-green.svg" alt="">
                 </div>
