Traduce las rutas y ligas

--- a/app/views/groups.html
+++ b/app/views/groups.html
@@ -36,7 +36,7 @@
           <div class="organizations-list">
             <div class="organization-item" ng-repeat="group in groups | filter:search">
               <div class="inner">
-                <a href="#/groups/{{group.name}}">
+                <a href="#/grupos/{{group.name}}">
                   <img src="{{group.image_display_url}}" alt="Logo de {{group.display_name}}" />
                 </a>
               </div>
