--- a/app/views/organizations.html
+++ b/app/views/organizations.html
@@ -37,7 +37,7 @@
           <div class="organizations-list">
             <div class="organization-item" ng-repeat="organization in organizations | filter:search">
               <div class="inner">
-                <a href="#/organizations/{{organization.name}}">
+                <a href="#/instituciones/{{organization.name}}">
                   <img src="{{organization.image_display_url}}" alt="Logo de {{organization.display_name}}" />
                 </a>
               </div>
