--- a/app/views/datasets.html
+++ b/app/views/datasets.html
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="datasets-list">
-            <a href="#/datasets/{{dataset.name}}" class="dataset-item" ng-repeat="dataset in datasets | filter:search">
+            <a href="#/conjuntos/{{dataset.name}}" class="dataset-item" ng-repeat="dataset in datasets | filter:search">
               <div class="dataset-trending-flag">
                 <img ng-src="http://datos.gob.mx/assets/svg/icon-trending-green.svg" alt="">
               </div>
