--- a/app/views/group.html
+++ b/app/views/group.html
@@ -41,7 +41,7 @@
               </div>
             </div>
             <div class="datasets-list">
-              <a href="#/datasets/{{dataset.name}}" class="dataset-item" ng-repeat="dataset in group.packages">
+              <a href="#/conjuntos/{{dataset.name}}" class="dataset-item" ng-repeat="dataset in group.packages">
                 <div class="dataset-trending-flag">
                   <img ng-src="http://datos.gob.mx/assets/svg/icon-trending-green.svg" alt="">
                 </div>
