Fix link to css

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,2 +1,2 @@
-// @import "http://datos.gob.mx/css/main.css";
-@import "http://localhost:4000/css/main.css";
+@import "http://datos.gob.mx/css/main.css";
+// @import "http://localhost:4000/css/main.css";
