Dataset counter displays number of search results

--- a/app/views/datasets.html
+++ b/app/views/datasets.html
@@ -7,7 +7,7 @@
           <div class="page-sidebar">
             <div class="page-info">
               <h2>Datos</h2>
-              <p>{{datasets.length}} conjuntos de datos</p>
+              <p>{{resultsCount}} conjuntos de datos</p>
             </div>
             <gov-types-menu />
           </div>
